0.2.37

* Documentation fix for #15

0.2.36 2017-04-18

* Requires latest version of Outthentic

0.2.35 2017-04-17

* Requires latest version of Outthentic

0.2.34 2017-04-11

* Requires latest version of Outthentic

0.2.33 2017-04-10

* Modified changes log ( occasionally missed at previos version )

0.2.32 2017-04-10

* run tasks and plugins - change titles in reports 

* automatic guessing of configuration format support

* task box run - transparently passes all plugin related options

* Add `help`, `info` aliases for `plg man` command

0.2.31 2017-03-29

* Requires latest version of Outthentic

0.2.30 2017-03-18

* bring in versions at Changes file

0.2.29 2017-03-18

* init_sparrow_env - do not remove sparrow cache ( need to fix https://github.com/melezhik/sparrowdo/issues/4 )

0.2.28 2017-03-02

* Requires latest version of Outthentic

0.2.27 2017-03-02

* Requires latest version of Outthentic

0.2.26 2017-02-17  

* Reports - changed markers for plugins and tasks 
* Requires latest version of Outthentic - to add timestamps to sparrow reports (#9)

0.2.25 2017-01-11

* support for task get created before version: 0.2.23 - evaluate task description as task name in case of missing task description in task meta data.
 
0.2.24 2017-01-11

* improved readability of reports - print story footprints as plugins names when running plugins

0.2.23 2017-01-09

* tasks - now save task description in meta data ( so that to print it out in task report )
* task boxes - add task descriptions to tasks

0.2.22 2017-01-09

* Sets git credential timeout for private plugin install 
* Improves task reports
* Passes --task parameter to strun ( to print out task names )

0.2.21  2016-12-19

* requires latest version of Outthentic

0.2.20 2016-12-15

* depends on latest version of Outthentic ( to allow --purge-cache )
* mention a --purge-cache at Sparrow doc

0.2.19 2016-11-23

* sparrow task run --nocolor hotfix

0.2.18 2016-11-21

* sparrow task run --dump-config hotfix
